[DE190023] fix: fix public ranking